nginxsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: devops
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
