svc.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworldsvc
  namespace: devops
  labels:
    app: helloworldsvc
spec:
  selector:
    app: helloworld
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
