gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mobifingw
  namespace: devops
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls-secret
      hosts:
        - '*'
